MDEV-8769: Server crash at file btr0btr.ic line 122 when defragmenting encrypted table using incorrect keys

Add error handling when getting block from encrypted table and decryption
fails.